--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<iframe class="_3HLqS" title="htmlComp-iframe" name="htmlComp-iframe" width="100%" height="100%" data-src="" src="https://dev-sameerae.pantheonsite.io/freestorelocator/"></iframe>
+<iframe allow="geolocation" class="_3HLqS" title="htmlComp-iframe" name="htmlComp-iframe" width="100%" height="100%" data-src="" src="https://dev-sameerae.pantheonsite.io/freestorelocator/"></iframe>
 </body>
 </html>
